--- a/sistemas_solar.html
+++ b/sistemas_solar.html
@@ -27,13 +27,13 @@
         <h2 id="Marte">Marte</h2>
         <img scr="planetas/marte.jpg" alt="marte">    
         <h2 id="Jupiter">Jupiter</h2> 
-        <img scr="planetas/jupiter.jpg" alt="jupiter">   
+        <img scr="planetas/jupiter.png" alt="jupiter">   
         <h2 id="Saturno">Saturno</h2>
         <img scr="planetas/saturno.jpg" alt="saturno">    
         <h2 id="Urano">Urano</h2> 
         <img scr="planetas/urano.jpg" alt="urano">    
         <h2 id="Neptuno">Neptuno</h2>
-        <img scr="planetas/neptuno.jpg" alt="neptuno">         
+        <img scr="planetas/neptuno.png" alt="neptuno">         
     </ul>
 
 </body>
