agregando colores y estilos

--- a/sistemas_solar.html
+++ b/sistemas_solar.html
@@ -6,34 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema Solar</title>
 </head>
-<body>
-    <h1>Planetas del sistema solar</h1>
+<body style="background-color: black; color: white;">
+    <h1 style="text-align: center; font-size: 40px; color: palevioletred;">Planetas del sistema solar</h1>
     <ul>
-        <li><a href="#mercurio">Mercurio</a></li>
-        <li><a href="#Venús">Venús</a></li>
-        <li><a href="#Tierra">Tierra</a></li>
-        <li><a href="#Marte">Marte</a></li>
-        <li><a href="#Jupiter">Jupiter</a></li>
-        <li><a href="#Saturno">Saturno</a></li>
-        <li><a href="#Urano">Urano</a></li>
-        <li><a href="#Neptuno">Neptuno</a></li>
+        <li><a href="#mercurio" style="color: yellow ">Mercurio</a></li>
+        <li><a href="#venús" style="color: yellow ">Venús</a></li>
+        <li><a href="#tierra" style="color: yellow ">Tierra</a></li>
+        <li><a href="#marte" style="color: yellow ">Marte</a></li>
+        <li><a href="#jupiter" style="color: yellow ">Jupiter</a></li>
+        <li><a href="#saturno" style="color: yellow ">Saturno</a></li>
+        <li><a href="#urano" style="color: yellow ">Urano</a></li>
+        <li><a href="#neptuno" style="color: yellow ">Neptuno</a></li>
     </ul>
-        <h2 id="Mercurio">Mercurio</h2>
-        <img scr="planetas/mercurio.jpg" alt="mercurio">
-        <h2 id="Venús">Venús</h2>
-        <img scr="planetas/venus.jpg" alt="venus">    
-        <h2 id="Tierra">Tierra</h2> 
-        <img scr="planetas/tierra.jpg" alt="tierra">   
-        <h2 id="Marte">Marte</h2>
-        <img scr="planetas/marte.jpg" alt="marte">    
-        <h2 id="Jupiter">Jupiter</h2> 
-        <img scr="planetas/jupiter.png" alt="jupiter">   
-        <h2 id="Saturno">Saturno</h2>
-        <img scr="planetas/saturno.jpg" alt="saturno">    
-        <h2 id="Urano">Urano</h2> 
-        <img scr="planetas/urano.jpg" alt="urano">    
-        <h2 id="Neptuno">Neptuno</h2>
-        <img scr="planetas/neptuno.png" alt="neptuno">         
+        <h2 id="mercurio" style="color: silver; font-size: 30px;">Mercurio</h2>
+        <img src="planetas/mercurio.jpg" alt="mercurio">
+        <h2 id="venús" style="color: tan; font-size: 30px;>Venús</h2>
+        <img src="planetas/venus.jpg" alt="venus">    
+        <h2 id="tierra" style="color: blue; font-size: 30px;>Tierra</h2> 
+        <img src="planetas/tierra.jpg" alt="tierra">   
+        <h2 id="marte" style="color: pink; font-size: 30px;>Marte</h2>
+        <img src="planetas/marte.jpg" alt="marte">    
+        <h2 id="jupiter" style="color: orangered; font-size: 30px;>Jupiter</h2> 
+        <img src="planetas/jupiter.png" alt="jupiter">   
+        <h2 id="saturno" style="color: greenyellow; font-size: 30px;>Saturno</h2>
+        <img src="planetas/saturno.jpg" alt="saturno">    
+        <h2 id="urano" style="color: rebeccapurple; font-size: 30px;>Urano</h2> 
+        <img src="planetas/urano.jpg" alt="urano">    
+        <h2 id="neptuno" style="color: brown; font-size: 30px;>Neptuno</h2>
+        <img src="planetas/neptuno.png" alt="neptuno">         
     </ul>
 
 </body>
