--- a/sistemas_solar.html
+++ b/sistemas_solar.html
@@ -20,19 +20,19 @@
     </ul>
         <h2 id="mercurio" style="color: silver; font-size: 30px;">Mercurio</h2>
         <img src="planetas/mercurio.jpg" alt="mercurio">
-        <h2 id="venús" style="color: tan; font-size: 30px;>Venús</h2>
+        <h2 id="venús" style="color: tan; font-size: 30px;">Venús</h2>
         <img src="planetas/venus.jpg" alt="venus">    
-        <h2 id="tierra" style="color: blue; font-size: 30px;>Tierra</h2> 
+        <h2 id="tierra" style="color: blue; font-size: 30px";>Tierra</h2> 
         <img src="planetas/tierra.jpg" alt="tierra">   
-        <h2 id="marte" style="color: pink; font-size: 30px;>Marte</h2>
+        <h2 id="marte" style="color: pink; font-size: 30px;">Marte</h2>
         <img src="planetas/marte.jpg" alt="marte">    
-        <h2 id="jupiter" style="color: orangered; font-size: 30px;>Jupiter</h2> 
-        <img src="planetas/jupiter.png" alt="jupiter">   
-        <h2 id="saturno" style="color: greenyellow; font-size: 30px;>Saturno</h2>
+        <h2 id="jupiter" style="color: orangered; font-size: 30px;">Jupiter</h2> 
+        <img src="planetas/jupiter.jpg" alt="jupiter">   
+        <h2 id="saturno" style="color: greenyellow; font-size: 30px;">Saturno</h2>
         <img src="planetas/saturno.jpg" alt="saturno">    
-        <h2 id="urano" style="color: rebeccapurple; font-size: 30px;>Urano</h2> 
+        <h2 id="urano" style="color: rebeccapurple; font-size: 30px;">Urano</h2> 
         <img src="planetas/urano.jpg" alt="urano">    
-        <h2 id="neptuno" style="color: brown; font-size: 30px;>Neptuno</h2>
+        <h2 id="neptuno" style="color: brown; font-size: 30px;">Neptuno</h2>
         <img src="planetas/neptuno.png" alt="neptuno">         
     </ul>
 
