--- a/prueba002.html
+++ b/prueba002.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="es" style="border: 8px violet dashed;background-color:bisque;">
+<html lang="es" style="background-color:bisque;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primera página web con estilos en linea</title>
 </head>
-<body style="width:80%; border:2px violet dashed; margin: auto;">
+<body style="width:80%; margin: auto;">
    <h1 style="color: darkgreen; text-align:center">Mi primera página web del curso</h1>
    
    <div style="width:90%; margin: auto;">
@@ -26,7 +26,7 @@
     </a>
 </div>
 
-<ul style="color: darkgreen;">
+<ul style="color: darkolivegreen;">
     <li>Hojas</li>
     <li>Tallo</li>
     <li>Color</li>
