--- a/practica_html.html
+++ b/practica_html.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<div> y </div>, initial-scale=1.0">
-    <title>Practica HTML</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Práctica_html</title>
 </head>
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
+    <h1 >Mi primera práctica web del curso</h1>
+    <hr> 
+       <div>
+      
+   </div> 
+   <div>
 
+   </div>
+   <div>
+
+   </div>
+
+   <style>
+       body{
+            width:80%; 
+            border: 2px blue dashed;
+            margin: auto;
+        }
+
+        h1{
+            color: darkgoldenrod; 
+            text-align:center;
+        }
+   </style>
 </body>
 </html>
