--- a/practica_html.html
+++ b/practica_html.html
@@ -102,16 +102,16 @@
          <h2>Segundo bloque</h2>
          <br>
          <br>
-       <div id="seccion1"> <section> Seccion1</section> </div>
+       <div id="seccion1"> <section> <br>Seccion1<br><br></section> </div>
        <br>
          <br>
-       <div id="seccion2"> <section> Seccion2</section> </div>
+       <div id="seccion2"> <section> <br>Seccion2<br><br></section> </div>
        <br>
          <br>
-       <div id="seccion3"> <section> Seccion3</section> </div>
+       <div id="seccion3"> <section> <br>Seccion3<br><br></section> </div>
        <br>
          <br>
-       <div id="seccion4"> <section> Seccion4</section> </div>
+       <div id="seccion4"> <section> <br>Seccion4<br><br></section> </div>
        <br>
          <br>
          <div id="bloque3">
