--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!--<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -60,7 +60,7 @@
 </body>
 </html>-->
                                     
-                                    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es" >
 <head>
     <meta charset="UTF-8">
