--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
     <title>Pokédex</title>
 </head>
 <body>
+    <style>
+        body{
+          font-family:Verdana;
+          margin: 0;
+        }
+        header{
+            background: #c00d0d;
+            color: white;
+            padding: 0 10%;
+        }
+        header >h1{
+            display: inline-block;
+            margin-left:30px;
+        }
+    </style>
     <header>
-        <img id="logo" scr=""" alt="logo"
+        <img id="logo" scr="aseets/logopok.png" alt="logo">
         <h1>Mi pokédex</h1>  
     </header>   
     <nav>
@@ -19,7 +34,7 @@
         <div id="pokedex">
             <div id="left">
                 <div class="display">
-                    <img id="pkmn-img" scr="" alt="pokemon"
+                    <img id="pkmn-img" scr="aseets/pokemon1.png" alt="pokemon">
                 </div>
                 <div id="dpad"></div>
                 <div id="btn-circle"></div>
