--- a/index.html
+++ b/index.html
@@ -1,61 +1,52 @@
-<!--<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Pokédex</title>
 </head>
 <body>
-    <style>
-        body{
-          font-family:Verdana;
-          margin: 0;
-        }
-        header{
-            background: #c00d0d;
-            color: white;
-            padding: 0 10%;
-        }
-        header >h1{
-            display: inline-block;
-            margin-left:30px;
-        }
-    </style>
-    <header>
-        <img id="logo" scr="aseets/logopok.png" alt="logo">
+        <header>
+        <img id="logo" src="assets/logo.png" alt="logo">
         <h1>Mi pokédex</h1>  
     </header>   
     <nav>
        <a href="">Inicio</a>
        <a href="">Acerca</a>
     </nav> 
+    <hr>
     <main>
         <div id="pokedex">
             <div id="left">
                 <div class="display">
-                    <img id="pkmn-img" scr="aseets/pokemon1.png" alt="pokemon">
+                    <img id="pkmn-img" src="assets/pokemon1.png" alt="pokemon">
                 </div>
-                <div id="dpad"></div>
+                <div id="dpad">
+                <div id="dpad-top"></div>
+                <div id="dpad-horizontal"></div>
+                <div id="dpad-bottom"></div>
+                </div>
                 <div id="btn-circle"></div>
             </div>
             <div id="right">
                 <div class="display">
                     <ul>
                      <li>
-                    <p><b>Nombre:</b></p>
+                    <p><b>Nombre:</b> Jigglypuff</p>
                      </li>
                      <li>
-                    <p><b>Tipo:</b></p
+                    <p><b>Tipo:</b> Normal</p
                      </li>
                      <li>
-                    <p><b>Altura:</b></p>
+                    <p><b>Altura:</b> 30cm</p>
                      </li>
                      <li>
-                    <p><b>Peso:</b></p>
+                    <p><b>Peso:</b> 1KG</p>
                      </li>
                      <li>
-                    <p><b>Descripción:</b></p>
+                    <p><b>Descripción:</b>Su canto es muy hermoso tanto que duerme a todos los que se encuentran al rededor</p>
                     </li>        
                 </ul>
                 </div>
@@ -73,9 +64,9 @@
         </div>
     </main> 
 </body>
-</html>-->
+</html>
                                     
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="es" >
 <head>
     <meta charset="UTF-8">
@@ -197,5 +188,5 @@
 
 
 
-</body>
+</body>-->
 </html>
